# infinite-driver

./: .gitignore  CMakeLists.txt  README.md
ext/imgui/: CMakeLists.txt
include/: application.hpp  opengl.hpp  skeleton_model.hpp
include/cgra/: cgra_geometry.hpp  cgra_gui.hpp  cgra_image.hpp  cgra_mesh.hpp  cgra_shader.hpp  cgra_wavefront.hpp
include/infd/: Application.hpp  BasicModel.hpp  Car.hpp  GLMesh.hpp  GLObject.hpp  ScopeGuard.hpp  Shader.hpp  Tuple.hpp  Wavefront.hpp
include/infd/debug/: geometry.hpp  glm.hpp
include/infd/generator/: ChunkGenerator.hpp  ChunkLoader.hpp  ChunkPtr.hpp  Edge.hpp  Node.hpp  PerlinNoise.hpp
include/infd/generator/fwd/: Node.hpp
include/infd/generator/meshbuilding/: BuildingMeshBuilder.hpp  PerlinMesh.hpp  Polygon.hpp  RoadMeshBuilder.hpp  Triangle.hpp
include/infd/generator/util/: helpers.hpp
include/infd/math/: DynamicRatio.hpp  glm_bullet.hpp
include/infd/render/: Framebuffer.hpp  Pipeline.hpp  RenderComponent.hpp  Renderer.hpp  Utils.hpp
include/infd/render/fwd/: RenderComponent.hpp  RenderComponentHandler.hpp  Renderer.hpp
include/infd/scene/: Component.hpp  FollowTransform.hpp  KeyboardInputRigidBodyController.hpp  LookAtParent.hpp  PhysicsContext.hpp  Scene.hpp  SceneObject.hpp  Timer.hpp  Transform.hpp  definitions.hpp  exceptions.hpp
include/infd/scene/decl/: Component.hpp  Scene.hpp  SceneObject.hpp  Transform.hpp
include/infd/scene/fwd/: Component.hpp  Scene.hpp  SceneObject.hpp  Transform.hpp
include/infd/scene/inline/: Component.hpp  Scene.hpp  SceneObject.hpp  Transform.hpp
include/infd/scene/physics/: BoxShape.hpp  BvhTriangleMeshShape.hpp  CapsuleShape.hpp  CompoundShape.hpp  CylinderShape.hpp  StaticPlaneShape.hpp  TransformMotionState.hpp  physics.hpp
include/infd/scene/physics/decl/: CollisionShape.hpp  PhysicsContext.hpp  RigidBody.hpp
include/infd/scene/physics/fwd/: CollisionShape.hpp  PhysicsContext.hpp  RigidBody.hpp
include/infd/scene/physics/inline/: CollisionShape.hpp  PhysicsContext.hpp  RigidBody.hpp
include/infd/util/: AlignedVector.hpp  ControllableProperty.hpp  Event.hpp  Function.hpp  OwnableProperty.hpp  StaticCastOutPtr.hpp  Timer.hpp  aligned_containers.hpp  concepts.hpp  exceptions.hpp  handle_vector.hpp
lib/Clipper2/: CMakeLists.txt
lib/bullet3/src/: CMakeLists.txt
lib/bullet3/src/LinearMath/: btAlignedAllocator.h
lib/glew-2.1.0/: glew.pc
lib/glfw-3.3.8/: CMakeLists.txt
lib/imgui/: CMakeLists.txt
lib/stb/: CMakeLists.txt
res/shaders/: dither_frag.glsl  fullscreen_texture_frag.glsl  fullscreen_texture_vert.glsl  obj_texture_frag.glsl  outline_frag.glsl  phong_frag.glsl  phong_vert.glsl  shadow_frag.glsl  shadow_vert.glsl  threshold_blit_frag.glsl
src/: CMakeLists.txt  application.cpp  main.cpp
src/cgra/: cgra_geometry.cpp  cgra_gui.cpp  cgra_gui.hpp  cgra_mesh.cpp  cgra_shader.cpp
src/infd/: Application.cpp  BasicModel.cpp  GLMesh.cpp  Shader.cpp
src/infd/debug/: geometry.cpp
src/infd/generator/: ChunkGenerator.cpp  ChunkLoader.cpp  ChunkPtr.cpp  Edge.cpp  Node.cpp
src/infd/generator/meshbuilding/: BuildingMeshBuilder.cpp  Polygon.cpp  RoadMeshBuilder.cpp  Triangle.cpp
src/infd/render/: Framebuffer.cpp  Pipeline.cpp  RenderComponent.cpp  Renderer.cpp  Utils.cpp
src/infd/scene/: FollowTransform.cpp  KeyboardInputRigidBodyController.cpp  LookAtParent.cpp  PhysicsContext.cpp  Scene.cpp  SceneObject.cpp  Transform.cpp
src/infd/scene/physics/: CollisionShape.cpp  PhysicsContext.cpp  RigidBody.cpp
test/: CMakeLists.txt
test/infd/physics/: CMakeLists.txt  main.cpp
